[package]
name = "open-vitals-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Rust protocol, evidence, validation, and local calculation core for OpenVitals."
license = "UNLICENSED"

[lib]
name = "open_vitals_core"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "open-vitals-fixture-index"
path = "src/bin/open-vitals-fixture-index.rs"

[[bin]]
name = "open-vitals-parser-fixture-runner"
path = "src/bin/open-vitals-parser-fixture-runner.rs"

[[bin]]
name = "open-vitals-capture-import"
path = "src/bin/open-vitals-capture-import.rs"

[[bin]]
name = "open-vitals-capture-sqlite-import"
path = "src/bin/open-vitals-capture-sqlite-import.rs"

[[bin]]
name = "open-vitals-capture-sanitize"
path = "src/bin/open-vitals-capture-sanitize.rs"

[[bin]]
name = "open-vitals-capture-correlation"
path = "src/bin/open-vitals-capture-correlation.rs"

[[bin]]
name = "open-vitals-capture-arrival-plan"
path = "src/bin/open-vitals-capture-arrival-plan.rs"

[[bin]]
name = "open-vitals-metric-input-readiness"
path = "src/bin/open-vitals-metric-input-readiness.rs"

[[bin]]
name = "open-vitals-metric-feature-report"
path = "src/bin/open-vitals-metric-feature-report.rs"

[[bin]]
name = "open-vitals-local-health-validation-suite"
path = "src/bin/open-vitals-local-health-validation-suite.rs"

[[bin]]
name = "open-vitals-command-validator"
path = "src/bin/open-vitals-command-validator.rs"

[[bin]]
name = "open-vitals-command-capture-plan"
path = "src/bin/open-vitals-command-capture-plan.rs"

[[bin]]
name = "open-vitals-reference-algo-runner"
path = "src/bin/open-vitals-reference-algo-runner.rs"

[[bin]]
name = "open-vitals-algo-benchmark"
path = "src/bin/open-vitals-algo-benchmark.rs"

[[bin]]
name = "open-vitals-calibration-evaluator"
path = "src/bin/open-vitals-calibration-evaluator.rs"

[[bin]]
name = "open-vitals-health-sync-dry-run"
path = "src/bin/open-vitals-health-sync-dry-run.rs"

[[bin]]
name = "open-vitals-historical-sync-validator"
path = "src/bin/open-vitals-historical-sync-validator.rs"

[[bin]]
name = "open-vitals-sleep-v1-release-gate"
path = "src/bin/open-vitals-sleep-v1-release-gate.rs"

[[bin]]
name = "open-vitals-sleep-v1-evidence-folder"
path = "src/bin/open-vitals-sleep-v1-evidence-folder.rs"

[[bin]]
name = "open-vitals-sleep-v1-stability-validator"
path = "src/bin/open-vitals-sleep-v1-stability-validator.rs"

[[bin]]
name = "open-vitals-sleep-window-validator"
path = "src/bin/open-vitals-sleep-window-validator.rs"

[[bin]]
name = "open-vitals-sleep-stage-label-validator"
path = "src/bin/open-vitals-sleep-stage-label-validator.rs"

[[bin]]
name = "open-vitals-storage-check"
path = "src/bin/open-vitals-storage-check.rs"

[[bin]]
name = "open-vitals-raw-export"
path = "src/bin/open-vitals-raw-export.rs"

[[bin]]
name = "open-vitals-export-validator"
path = "src/bin/open-vitals-export-validator.rs"

[[bin]]
name = "open-vitals-debug-ws-contract"
path = "src/bin/open-vitals-debug-ws-contract.rs"

[[bin]]
name = "open-vitals-debug-ws-serve"
path = "src/bin/open-vitals-debug-ws-serve.rs"

[[bin]]
name = "open-vitals-ui-coverage-audit"
path = "src/bin/open-vitals-ui-coverage-audit.rs"

[[bin]]
name = "open-vitals-privacy-lint"
path = "src/bin/open-vitals-privacy-lint.rs"

[[bin]]
name = "open-vitals-property-test-suite"
path = "src/bin/open-vitals-property-test-suite.rs"

[[bin]]
name = "open-vitals-perf-budget"
path = "src/bin/open-vitals-perf-budget.rs"

[dependencies]
crc32fast = "1.4"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tungstenite = "0.28"
zip = "0.6"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
